samples/_failures_safe/1761330731_454ad0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c63db784.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_c63db784.c: In function ‘main’:
./samples/SAFE/__tmp_c63db784.c:155:13: error: expected expression at end of input
  155 |             case
      |             ^~~~
./samples/SAFE/__tmp_c63db784.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c63db784.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c63db784.c:155:13: error: expected declaration or statement at end of input
